# NetworkManager-anyconnect

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  nm-anyconnect-service.conf  nm-anyconnect-service.name.in
appdata/: network-manager-anyconnect.metainfo.xml.in
auth-dialog/: main.c
po/: LINGUAS  POTFILES.in  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  mr.po  nb.po  (+23 more)
properties/: gresource.xml  libnm-vpn-plugin-anyconnect-editor.ver  nm-anyconnect-dialog.ui  nm-anyconnect-editor-plugin.c  nm-anyconnect-editor-plugin.h  nm-anyconnect-editor.c  nm-anyconnect-editor.h
rpm/: NetworkManager-anyconnect-fix-perms  NetworkManager-anyconnect.spec.in
rpm/selinux/: NetworkManager-anyconnect-selinux.spec  nm_anyconnect_service.fc  nm_anyconnect_service.if  nm_anyconnect_service.te
shared/: nm-default.h  nm-service-defines.h
src/: nm-anyconnect-service.c
